[package]
name = "hypertrader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
futures = "0.3"
tokio-tungstenite = "0.21"
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
